--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,12 @@
     <artifactId>guava</artifactId>
     <version>32.1.2-jre</version>
 </dependency>
+<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-mail -->
+<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-mail</artifactId>
+    <version>3.2.1</version>
+</dependency>
 
 	</dependencies>
 
